fix: hide scrollbar for modal in all browsers

--- a/packages/map-template/src/components/Sidebar/Modal/Modal.scss
+++ b/packages/map-template/src/components/Sidebar/Modal/Modal.scss
@@ -14,6 +14,16 @@ $desktop-breakpoint: 992px;
     display: none;
     max-height: 80%;
 
+    /* Hide scrollbar for all browsers */
+    /* For WebKit browsers (Chrome, Safari) */
+     &::-webkit-scrollbar {
+        display: none;
+    } 
+    /* For Firefox */
+    scrollbar-width: none;
+    /* Edge */
+    -ms-overflow-style: none;
+
     &--open {
         transform: translateY(0);
         display: block;
